Warnings hunt (#3148)
* Cleanup

* More

* More

* Fix particle cast

* More

* More

* comments

* Always more

* More

* nullable previousGameMode

* review

* Redundant notnull